# GildedRose-Refactoring-Kata

cpp/: CMakeLists.txt  README.md
cpp/cpp_catch2/: CMakeLists.txt
cpp/cpp_catch2/cpp_catch2_approvaltest/test/: CMakeLists.txt
cpp/cpp_catch2/cpp_catch2_unittest/: CMakeLists.txt
cpp/cpp_catch2/cpp_catch2_unittest/test/: CMakeLists.txt
cpp/cpp_catch2/lib/: CMakeLists.txt
cpp/cpp_catch2/src/: CMakeLists.txt  GildedRose.cpp  GildedRose.h
cpp/cpp_catch2/test/: CMakeLists.txt  GildedRoseApprovalTests.cc  test_gilded_rose.cpp
cpp/cpp_googletest/: CMakeLists.txt
cpp/cpp_googletest/cpp_googletest_approvaltest/: CMakeLists.txt
cpp/cpp_googletest/cpp_googletest_approvaltest/test/: CMakeLists.txt  GildedRoseApprovalTests.cc
cpp/cpp_googletest/cpp_googletest_unittest/: CMakeLists.txt
cpp/cpp_googletest/cpp_googletest_unittest/test/: CMakeLists.txt
cpp/test/cpp_googletest_approvaltest/: CMakeLists.txt
cpp/test/cpp_googletest_unittest/: CMakeLists.txt
