set(TEST_NAME GildedRoseGoogletestUnitTests)
add_executable(${TEST_NAME})
target_sources(${TEST_NAME} PRIVATE GildedRoseGoogletestUnitTests.cc)
target_link_libraries(${TEST_NAME} src gtest gtest_main)
set_property(TARGET ${TEST_NAME} PROPERTY CXX_STANDARD 17)
add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
